--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     Taipei · Taiwan · (886) 975 817 252 ·
                     <a href="mailto:linda884015@gmail.com">linda884015@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                <p class="lead mb-5">My ambition is to revitalize the technology industry by utilizing my distinctive programming insights to address critical challenges.</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/yi-chen-aprillin/"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/Aprilmeowmeow"><i class="fab fa-github"></i></a>
